# sesac-test-ProudNet

./: .gitignore  CMakeLists.txt
Client/: CMakeLists.txt  Client.cpp  Client.h  ClientGameManager.cpp  ClientGameManager.h  ClientPlayer.cpp  ClientPlayer.h  ClientUI.cpp  ClientUI.h  stdafx.h
Common/: CMakeLists.txt  Item.cpp  Item.h  PlayerInfo.cpp  PlayerInfo.h  TestGame.pidl  TestGame_common.cpp  TestGame_common.h  TestGame_proxy.cpp  TestGame_proxy.h  TestGame_stub.cpp  TestGame_stub.h  TileData.cpp  TileData.h  Vars.cpp  Vars.h
Common/Scripts/: TestGame_proxy.cs  TestGame_stub.cs
Marshal/: CMakeLists.txt  Item.cpp  Item.h  Player.cpp  Player.h  PlayerInfo.cpp  PlayerInfo.h
Server/: CMakeLists.txt  GameManager.h  Server.cpp  Server.h
UnityClient/: .gitignore
UnityClient/Assets/Resources/Prefabs/: Item.prefab  ItemPrefab.prefab  Player.prefab  PlayerPrefab.prefab
UnityClient/Assets/Scenes/: SampleScene.unity
UnityClient/Assets/Scripts/: GameClient.cs  GameManager.cs  Item.cs  ItemMarshaler.cs  KeyboardManager.cs  Player.cs  PlayerMarshaler.cs  PlayerObject.cs  TestGame_common.cs  TestGame_proxy.cs  TestGame_stub.cs
UnityClient/ProjectSettings/: ProjectSettings.asset
